--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Maulana and i'm a <span class="typing2"></span></div>
-                    <p>Sofware developer with bachelor's degree in Physics from Universitas Padjadjaran. I make Windows desktop software with C#, Website, and microcontroller program with C++. Working at PT. Tigaresi Bangun Nusaperdana from (2017-Now). I develop various integrated system that used in TBBM Pertamina. </p>
+                    <p>Sofware developer with bachelor's degree in Physics from Universitas Padjadjaran. I make Windows desktop software with C#, Website with ASP .Net, and microcontroller program with C++. Working at PT. Tigaresi Bangun Nusaperdana from (2017-Now). I develop various integrated system that used in TBBM Pertamina. </p>
                 </div>
             </div>
         </div>
